<resources>
    <string name="app_name">Hoocons</string>
    <string name="file_provider_authorities">com.hoocons.hooconsandroid.provider</string>

    <string name="facebook_app_id">1976876255916415</string>
    <string name="facebook_account_kit">1a1bc440e5e29a836eea66e0cd5cfc2f</string>
    <string name="fb_login_protocol_scheme">fb1976876255916415</string>
    <string name="base_url">http://hoocons.com</string>

    <!-- Setting Strings -->
    <string name="action_reset_password">Forget password? Reset now</string>
    <string name="action_allow_permission">Allow Permission</string>
    <string name="pick_location">Pick Location</string>
    <string name="pick_channel_location">Choose a location that your channel will be most seen</string>
    <string name="toast_pick_loc">please pick a location</string>
    <string name="action_register">Register an account</string>
    <string name="continue_with_phone_number">Continue with phone number</string>
    <string name="login_by_facebook">Login By Facebook</string>
    <string name="continue_text">Continue</string>
    <string name="welcome">Welcome to Hoocons travellers community</string>
    <string name="welcome_desc">A better way to have travel experiences from over the world</string>
    <string name="help_center">Help Center</string>
    <string name="rate_and_comment">Rate and Comment</string>
    <string name="report_a_problem">Report a Problem</string>
    <string name="privacy_and_term">Privacy and Terms</string>
    <string name="contact_us">Contact us</string>
    <string name="logout">Logout</string>
    <string name="app_info">App Info</string>
    <string name="fun_activities">Fun Activities</string>
    <string name="add_more_contents">More contents</string>
    <string name="add_journal">New Journal</string>
    <string name="invite">Invite</string>
    <string name="add_tag">Add tags</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="country">Country</string>
    <string name="clicked_signup_condition">By clicked "Sign Up" you agree with our Terms and Conditions</string>
    <string name="term_and_condition">Terms and Conditions</string>
    <string name="update_info">Update Info</string>
    <string name="empty_field">This field is required</string>
    <string name="pass_too_short">Password must have at least 6 characters</string>
    <string name="follow">Follow</string>
    <string name="more">More</string>
    <string name="discover">Discover</string>
    <string name="featured">Featured</string>
    <string name="inbox">Inbox</string>
    <string name="connection">Connection</string>
    <string name="search_hoocons">Search Hoocons…</string>
    <string name="popular_tour">Popular Tours</string>
    <string name="popular_places">Top Places</string>

    <string name="all">All</string>
    <string name="journal">Journal</string>
    <string name="places">Places</string>
    <string name="journals">Journals</string>
    <string name="followers">Followers</string>
    <string name="friends">Friends</string>
    <string name="no_rel_title">No connection</string>
    <string name="start_inviting_friends">Start inviting friends to Hoocons!</string>
    <string name="no_chatroom_title">No conversation!</string>
    <string name="start_making_conversation">Start chatting now</string>
    <string name="start_chat">Start Chat</string>
    <string name="recent_convs">Recent Conversations</string>
    <string name="collection">Collection</string>
    <string name="connections">Connections</string>
    <string name="medias">Medias</string>

    <!-- LOGIN SCREENS-->
    <string name="verify_phone_number">Verify Phone Number</string>
    <string name="confirmation_code">Confirmation Code</string>
    <string name="confirm_code_explain">Enter the code that have been sent to your phone through SMS</string>
    <string name="send_code">Send code</string>
    <string name="verify">Verify</string>
    <string name="resend">Send again</string>
    <string name="enter_password">Enter Password</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="user_info">User Information</string>
    <string name="user_display_name">Full name</string>
    <string name="user_nickname">Nickname</string>
    <string name="check">Check</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="phone_number">Phone Number</string>
    <string name="error_phone_number">invalid phone number</string>
    <string name="registering">Registering..</string>
    <string name="error_empty_password">you must enter password</string>
    <string name="error_pass_not_match">password does not match</string>
    <string name="login_failed">Login failed! Please check username or password</string>
    <string name="server_error">Server error! Please try again later</string>
    <string name="warning">Warning</string>
    <string name="account_banned_warn">This account has been banned</string>
    <string name="fetch_user_info_error">Cannot fetch user data! Please check connection</string>
    <string name="no_connection">No Connection</string>
    <string name="new_user_question">New User?</string>
    <string name="new_user_detect_and_req_register">This phone has not registered with us yet! Register now</string>
    <string name="register">Register</string>
    <string name="not_now">Not Now</string>
    <string name="nickname_error">Invalid nickname</string>
    <string name="not_enough_ages">too young! you are not allowed here</string>
    <string name="checked">Checked</string>
    <string name="requested">Requested</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="messages">Messages</string>
    <string name="nickname_unavailable">This nickname is taken</string>
    <string name="error_empty_nickname">Nickname must not be empty</string>
    <string name="error_empty_name">Please enter your full name</string>
    <string name="profile_required">Profile Required</string>
    <string name="upload_failed_tryagain">Upload failed! Please try again</string>
    <string name="error_empty_profile">Please provide a profile picture</string>
    <string name="birthday">Birthday</string>
    <string name="withdraw_friend_request">Withdraw friend request?</string>
    <string name="withdraw_friend_request_content">Other user will no longer see your friend request!</string>
    <string name="withdraw">Withdraw</string>
    <string name="request_ready">request ready</string>
    <string name="add_a_title">Does it has a title?</string>
    <string name="event_content_desc">What\'s going on with you?</string>

    <string name="images">Images</string>
    <string name="video_type">Video/Short Clip</string>
    <string name="location_type">Location/Check in</string>
    <string name="gif_type">Short Gif</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quick_comment">Add a comment</string>

    <string name="refresh">Refresh</string>
    <string name="copy_url">Copy URL</string>
    <string name="clean_cache">Clean Cache</string>
    <string name="default_browser">Default Browser</string>
    <string name="new_event">New Event</string>
    <string name="next_cap">NEXT</string>
    <string name="close">Close</string>
    <string name="content">Content</string>
    <string name="media">Media</string>
    <string name="location">Location</string>
    <string name="tag">Tag</string>
    <string name="privacy">Privacy</string>

    <string name="type_question">Question</string>
    <string name="type_story">Story</string>
    <string name="type_story_desc">Create a new story to let someone know what is going on with you…</string>
    <string name="type_question_desc">Let\'s listen to some ideas and suggestions from people around you by posting a question…</string>
</resources>
