<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/featured"
        android:icon="@drawable/ic_favorite_inactive"
        android:enabled="true"
        android:title="@string/follow"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/nearme"
        android:icon="@drawable/ic_search_inactive"
        android:title="@string/discover"
        android:enabled="true"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/chat_list"
        android:icon="@drawable/ic_speech_inactive"
        android:title="@string/messages"
        android:enabled="true"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_more_inactive"
        android:title="@string/more"
        android:enabled="true"
        app:showAsAction="ifRoom"/>
</menu>