<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:paddingStart="@dimen/margin_16"
        android:paddingEnd="@dimen/margin_16"
        android:paddingTop="@dimen/margin_16"
        android:paddingBottom="@dimen/margin_16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:text="@string/collection"
        android:textSize="@dimen/text_14"
        android:textColor="@color/gray_alpha"/>

    <TextView
        android:id="@+id/txt_connection"
        style="@style/TextWithImageStyle"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:background="@drawable/selector_item_row"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_circle_question_mark"
        android:drawableEnd="@drawable/right"
        android:text="@string/connections" />

    <View
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        android:layout_width="match_parent"
        android:layout_height="@dimen/decorator_line_height"
        android:background="@color/gray_alpha"/>

    <TextView
        android:id="@+id/txt_medias"
        style="@style/TextWithImageStyle"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:background="@drawable/selector_item_row"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_circle_question_mark"
        android:drawableEnd="@drawable/right"
        android:text="@string/medias" />

    <View
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        android:layout_width="match_parent"
        android:layout_height="@dimen/decorator_line_height"
        android:background="@color/gray_alpha"/>

</LinearLayout>