<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hoocons.hooconsandroid.ViewFragments.PhoneLoginFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/custom_toolbar">
        <include layout="@layout/custom_login_actionbar"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/custom_toolbar">

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textSize="@dimen/large_title_size"
                android:textColor="@color/text_dark_color"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/margin_24"
                android:text="@string/login"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:clickable="true"
                    android:background="?attr/selectableItemBackground"
                    android:layout_marginTop="@dimen/margin_8"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/country_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_dark_color"
                        android:textSize="@dimen/text_24"
                        android:text="+97"/>

                    <ImageView
                        android:layout_marginStart="@dimen/margin_4"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_drop_down"/>
                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_12"
                    android:theme="@style/AuthInputTextLabel"
                    >

                    <AutoCompleteTextView
                        android:id="@+id/phone"
                        android:textColor="@color/colorAccent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_20"
                        android:hint="@string/phone_number"
                        android:inputType="textPhonetic"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AuthInputTextLabel"
                >

                <EditText
                    android:id="@+id/password"
                    android:textSize="@dimen/text_20"
                    android:textColor="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/common_signin_button_text"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/gcn_next"
                android:layout_marginTop="@dimen/margin_12"
                android:layout_width="match_parent"
                android:layout_height="@dimen/big_button_height"
                android:layout_gravity="center_horizontal"
                android:text="@string/continue_text"
                android:textAllCaps="false"
                android:theme="@style/Hoocons.Button" />

            <Button
                android:layout_marginTop="@dimen/margin_12"
                android:layout_marginBottom="@dimen/margin_24"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:id="@+id/reset_password"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_reset_password"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_12"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
