<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hoocons.hooconsandroid.ViewFragments.NewInfoFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/custom_toolbar"
        android:layout_alignParentTop="true">
        <include layout="@layout/custom_authenticate_actionbar"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:layout_below="@+id/custom_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_24"
            android:gravity="center">

            <com.hoocons.hooconsandroid.CustomUI.SquareImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/profile_image"
                    android:layout_width="@dimen/profile_header_height"
                    android:layout_height="@dimen/profile_header_height"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/hoocons_image_logo"/>
            </com.hoocons.hooconsandroid.CustomUI.SquareImageView>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_12"
                android:theme="@style/AuthInputTextLabel"
                >

                <AutoCompleteTextView
                    android:id="@+id/name_input"
                    android:textColor="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_20"
                    android:hint="@string/user_display_name"
                    android:inputType="textAutoComplete"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@+id/gender_group"
                    android:theme="@style/AuthInputTextLabel"
                    android:clickable="false"
                    android:focusable="false"
                    >

                    <AutoCompleteTextView
                        android:id="@+id/birthday"
                        android:textColor="@color/colorAccent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_20"
                        android:hint="@string/birthday"
                        android:inputType="textAutoComplete"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:id="@+id/gender_group"
                    android:checkedButton="@+id/gender_male"
                    android:orientation="horizontal">

                    <RadioButton
                        android:layout_marginStart="@dimen/margin_4"
                        android:layout_marginEnd="@dimen/margin_4"
                        android:id="@+id/gender_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="true"
                        android:text="@string/male"/>

                    <RadioButton
                        android:id="@+id/gender_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female"/>
                </RadioGroup>
            </RelativeLayout>

            <Button
                android:id="@+id/update_info"
                android:layout_marginTop="@dimen/margin_12"
                android:layout_width="match_parent"
                android:layout_height="@dimen/big_button_height"
                android:layout_gravity="center_horizontal"
                android:text="@string/update_info"
                android:textColor="@color/white"
                android:textAllCaps="false"
                style="?android:textAppearanceMedium"
                android:theme="@style/Hoocons.Button" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:id="@+id/details_txt"
                android:layout_marginTop="@dimen/margin_16"
                android:text="hello"
                android:textAlignment="center"
                android:textSize="@dimen/text_12"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
