<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:layout_margin="@dimen/margin_8"
        style="@style/ChannelDetailCardViewStyle"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginBottom="@dimen/margin_4">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_12">

            <LinearLayout
                android:layout_alignParentTop="true"
                android:id="@+id/user_stats_root"
                android:layout_centerInParent="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal">

                <LinearLayout
                    style="@style/ChannelActionButton"
                    android:id="@+id/member_count_btn">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1167"
                        android:id="@+id/member_count"
                        android:textColor="@color/dark_text_color"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/journals"
                        android:id="@+id/journal_text"
                        android:textStyle="bold"
                        android:textColor="@color/dark_text_color"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    style="@style/ChannelActionButton"
                    android:id="@+id/follower_count_btn">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="485"
                        android:id="@+id/follower_count"
                        android:textColor="@color/dark_text_color"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/followers"
                        android:textStyle="bold"
                        android:id="@+id/follower_text"
                        android:textColor="@color/dark_text_color"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/favorite_count_btn"
                    style="@style/ChannelActionButton">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="485"
                        android:id="@+id/friend_count"
                        android:textColor="@color/dark_text_color"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/friends"
                        android:id="@+id/friend_text"
                        android:textColor="@color/dark_text_color"
                        android:textStyle="bold"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/user_stats_root"
                android:id="@+id/linear"
                android:layout_margin="@dimen/margin_12"
                android:background="@color/gray_alpha"/>

            <LinearLayout
                android:layout_below="@+id/linear"
                android:layout_centerInParent="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:weightSum="3"
                android:orientation="horizontal">

                <LinearLayout
                    style="@style/ChannelActionButton"
                    android:id="@+id/join_button">

                    <ImageView
                        android:layout_width="@dimen/channel_action_button_size"
                        android:layout_height="@dimen/channel_action_button_size"
                        android:id="@+id/join_icon"
                        android:src="@drawable/ic_add_inactive" />

                    <TextView
                        android:id="@+id/join_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_journal"
                        android:textColor="@color/dark_text_color"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    style="@style/ChannelActionButton"
                    android:id="@+id/invite_button">

                    <ImageView
                        android:id="@+id/invite_icon"
                        android:layout_width="@dimen/channel_action_button_size"
                        android:layout_height="@dimen/channel_action_button_size"
                        android:src="@drawable/search_icon"
                        />

                    <TextView
                        android:id="@+id/invite_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/invite"
                        android:textColor="@color/dark_text_color"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    style="@style/ChannelActionButton"
                    android:id="@+id/more_button">

                    <ImageView
                        android:id="@+id/more_icon"
                        android:layout_width="@dimen/channel_action_button_size"
                        android:layout_height="@dimen/channel_action_button_size"
                        android:src="@drawable/ic_more_inactive" />

                    <TextView
                        android:id="@+id/more_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/more"
                        android:textColor="@color/dark_text_color"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>